<resources>
    <string name="app_name">教学信息交流</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账号(手机号码)</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="validate">验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_account">账号不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">注册</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">add</string>

    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>

    <!--签到-->
    <string name="course_name">课程名：</string>
    <string name="course_content">内容：</string>
    <string name="course_teacher">任课老师：</string>
    <string name="location">位置：</string>
    <string name="verification">验证码：</string>
    <string name="verification_button">获取</string>
    <string name="start">签到</string>
    <string name="teacher_start">添加</string>
</resources>
