<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    >
    <include layout="@layout/inc_head_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/course_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/course_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:padding="1dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="xxxx"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/content_title"
                android:layout_width="90dp"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/course_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="left|top"
                />
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="18sp"
                android:gravity="right|top"
                android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
                android:singleLine="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/teacher"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/course_teacher"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center|top"
                />
            <TextView
                android:id="@+id/teacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="18sp"
                android:gravity="right|top"
                android:text="xxxxxxxxxxx"
                android:ellipsize="end"
                android:singleLine="true"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="添加时间："
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center|top"
                />
            <TextView
                android:id="@+id/course_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="18sp"
                android:gravity="right|top"
                android:text="xxxxxxxxxxx"
                android:ellipsize="end"
                android:singleLine="true"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="选择"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/button_background_selector"
        android:layout_margin="10dp"
        />
</LinearLayout>
