<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    >
    <include layout="@layout/inc_head_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/course_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:id="@+id/course_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:padding="1dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="xxxx"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/content_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/course_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center|top"
                />
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="18sp"
                android:gravity="right|top"
                android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
                android:ellipsize="end"
                android:singleLine="false"
                />

        </LinearLayout>
        <!-- 更多和箭头 -->
        <RelativeLayout
            android:id="@+id/show_more"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:clickable="true"
            >
            <TextView
                android:id="@+id/show_more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="13sp"
                android:textColor="#999"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/detail_down"
                android:text="更多" />


            <ImageView
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:background="@mipmap/detail_down"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/detail_up"
                android:layout_marginRight="2dp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <AutoCompleteTextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:editable="false"
                    />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/location_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:drawableLeft="@mipmap/location"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:visibility="gone"
                />
            <ProgressBar
                android:id="@+id/login_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:indeterminateDrawable="@anim/progressbar_circle"
                android:minHeight="15dp"
                android:minWidth="15dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"

                />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
